--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DaniBot | GenZ</title>
+  <title>Simple AI Chatbot</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <div class="tooltip-container">
-    <button id="newchat" onclick="newchat()" data-tooltip="New chat, fam!">+</button>
-  </div>
+  
   <header>
     <div class="titles">
       <h1>DaniBot</h1>
@@ -36,7 +34,9 @@
       </button>
     </section>
   </main>
- 
+  <div class="tooltip-container">
+    <button id="newchat" onclick="newchat()" data-tooltip="New chat, fam!">+</button>
+  </div>
   
   <script src="script.js"></script>
 </body>
